--- a/src/renderer/styles/index.css
+++ b/src/renderer/styles/index.css
@@ -1,4 +1,9 @@
-body {
-  margin: 20px;
+html, body {
   font-family: 'Segoe UI', 'Roboto', 'Oxygen';
+  min-height: 100vh;
+  margin: 0;
+}
+
+body {
+  background-color: aqua;
 }
